tests/arch/riscv/error/compiler/test_riscv_error_compiler_004.s

#
# Creator (https://creatorsim.github.io/creator/)
#

 .data
 	A:		.word -1
   a:		.byte -1
    
.text
main:
	add t0, t1, s50